--- a/index.html
+++ b/index.html
@@ -5,8 +5,49 @@
     <title>HTML Academy: Седона</title>
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
+    <header class="main-header">
+      <nav class="navigation">
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link " href="main.html">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link " href="about_sedona.html">О седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link " href="Hotels.html">Гостиницы</a>
+          </li>
+        </ul>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link " href="#">
+              <span class="visually-hidden">
+                Поиск
+              </span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link " href="#">
+              <span class="visually-hidden">
+                Счетчик нравится
+              </span>
+            </a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link " href="#">
+              <span class="visually-hidden">
+                Хочу сюда
+              </span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <!-- Основное содержимое страницы -->
+    </main>
+    <footer class="main-footer">
+      <!-- Подвал сайта -->
+    </footer>
   </body>
 </html>
