--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <body>
     <header class="main-header">
       <nav class="navigation">
+        <img class="header-logo" src="" alt="логотип седона">
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link " href="main.html">Главная</a>
@@ -43,11 +44,109 @@
         </ul>
       </nav>
     </header>
-    <main>
-      <!-- Основное содержимое страницы -->
+
+    <main class="main-index">
+      <section class="hero">
+        <h1 class="visually-hidden">SEDONA</h1>
+      <img class="hero" src="" alt="пейзаж Sedona">
+      </section>
+
+      <section class="description">
+        <h2 class="description-sedona">Седона — небольшой городок в Аризоне,
+          заслуживающий большего!</h2>
+          <p class="description-more">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+      </section>
+
+      <section class="advantages">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <h3 class="advantages-title">Настоящий городок</h3>
+            <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            <img class="photo-1" src="" alt="здание цветы горы">
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Небольшая площадь</h3>
+            <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Красивая дорога</h3>
+            <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Мало туристов</h3>
+            <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-title">Там есть мост дьявола</h3>
+            <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            <img class="photo-2" src="" alt="мост дьявола">
+          </li>
+          <li class="advantages-item">
+            <img class="advantages-icon" src="" alt="иконка дом">
+            <h3 class="advantages-title">Жильё</h3>
+            <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+          </li>
+          <li class="advantages-item">
+            <img class="advantages-icon" src="" alt="иконка еда">
+            <h3 class="advantages-title">Еда</h3>
+            <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          </li>
+          <li class="advantages-item">
+            <img class="advantages-icon" src="" alt="иконка сувенир">
+            <h3 class="advantages-title">Сувениры</h3>
+            <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
+          </li>
+        </ul>
+      </section>
+
+      <section class="hotels">
+        <h2 class="hotels-title">Заинтересовались?</h2>
+        <p class="hotels-description">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <a class="button button-hotels" href="#">Поиск гостиницы в седоне</a>
+      </section>
+
+      <section class="subscribe">
+        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+        <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+          <label for="subscribe-email"></label>
+          <input class="field" placeholder="Ваш email" type="email" name="subscribe-email" id="subscribe-email" required>
+          <button class="button subscribe-button" type="submit">
+            <span class="visually-hidden">Подписаться</span>
+          </button>
+        </form>
+      </section>
     </main>
-    <footer class="main-footer">
-      <!-- Подвал сайта -->
+
+    <footer class="page-footer">
+      <section class="footer-social">
+        <ul class="footer-social-list">
+          <li class="footer-social-item">
+            <a class="button" href="https://vk.com/htmlacademy">
+              <span class="visually-hidden">Вконтакте</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="button" href="https://t.me/htmlacademy">
+              <span class="visually-hidden">Телеграм</span>
+            </a>
+          </li>
+          <li class="footer-social-item">
+            <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+              <span class="visually-hidden">Youtube</span>
+            </a>
+          </li>
+        </ul>
+      </section>
+
+      <section class="number">
+        <a class="footer-contacts-address-phone" href="tel:+78128121212">+78128121212</a>
+      </section>
+
+      <p class="about-text">
+        <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a>
+      </p>
     </footer>
   </body>
 </html>
