Корректирует лого и мелкие исправления href, добавление каталога с гостиницами

--- a/index.html
+++ b/index.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html lang="ru">
+
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Седона</title>
   </head>
+
   <body>
     <header class="main-header">
       <nav class="navigation">
-        <img class="header-logo" src="" alt="логотип седона">
         <ul class="navigation-list">
           <li class="navigation-item">
-            <a class="navigation-link " href="main.html">Главная</a>
+            <div class="logo-container">
+              <a class="navigation-logo" href="index.html">
+                <img class="page-header-logo" src="" alt="логотип седона">
+              </a>
+            </div>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link " href="about_sedona.html">О седоне</a>
+            <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link " href="Hotels.html">Гостиницы</a>
+            <a class="navigation-link" href="about_sedona.html">О седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="hotels.html">Гостиницы</a>
           </li>
         </ul>
         <ul class="navigation-list navigation-user">
