правка главная и каталог, исправляет readme.md

--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
           <li class="navigation-item">
             <div class="logo-container">
               <a class="navigation-logo" href="index.html">
-                <img class="page-header-logo" src="" alt="логотип седона">
+                <img class="page-header-logo" src="" alt="логотип седона.">
               </a>
             </div>
           </li>
@@ -117,13 +117,13 @@
           <option value="expensive">Сначала дорогие</option>
         </select>
         <a class="button button-light" href="#">
-          <span class="visually-hidden">Показать в виде эскизов</span>
+          <span class="visually-hidden">Показать в виде эскизов.</span>
         </a>
         <a class="button button-light" href="#">
-          <span class="visually-hidden">Показать в виде таблицы</span>
+          <span class="visually-hidden">Показать в виде таблицы.</span>
         </a>
         <a class="button button-light" href="#">
-          <span class="visually-hidden">Показать в виде списка</span>
+          <span class="visually-hidden">Показать в виде списка.</span>
         </a>
       </section>
 
@@ -132,7 +132,7 @@
         <ul class="hotels-catalog-list">
           <li class="hotels-catalog-amara">
             <a class="hotels-catalog-link" href="#">
-              <img class="hotels-catalog-image" src="" alt="amara">
+              <img class="hotels-catalog-image" src="" alt="amara.">
               <h4 class="hotels-catalog-title-amara">Amara Resort &#38; Spa</h4>
               <span class="hotels-catalog-description-amara">Гостиница</span>
               <span class="hotels-catalog-price-description-amara">От 4000 &#8381;</span>
@@ -144,7 +144,7 @@
           </li>
           <li class="hotels-catalog-villas">
             <a class="hotels-catalog-link" href="#">
-              <img class="hotels-catalog-image" src="" alt="villas">
+              <img class="hotels-catalog-image" src="" alt="villas.">
               <h4 class="hotels-catalog-title-villas">Villas at Poco Diablo</h4>
               <span class="hotels-catalog-description-villas">Гостиница</span>
               <span class="hotels-catalog-price-description-villas">От 5000 &#8381;</span>
@@ -156,7 +156,7 @@
           </li>
           <li class="hotels-catalog-desert">
             <a class="hotels-catalog-link" href="#">
-              <img class="hotels-catalog-image" src="" alt="desert">
+              <img class="hotels-catalog-image" src="" alt="desert.">
               <h4 class="hotels-catalog-title-desert">Desert Quail Inn</h4>
               <span class="hotels-catalog-description-desert">Гостиница</span>
               <span class="hotels-catalog-price-description-desert">От 2500 &#8381;</span>
@@ -168,7 +168,7 @@
           </li>
           <li class="hotels-catalog-green">
             <a class="hotels-catalog-link" href="#">
-              <img class="hotels-catalog-image" src="" alt="green">
+              <img class="hotels-catalog-image" src="" alt="green.">
               <h4 class="hotels-catalog-title-green">GreenTree Inn</h4>
               <span class="hotels-catalog-description-green">Гостиница</span>
               <span class="hotels-catalog-price-description-green">От 1500 &#8381;</span>
