--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
           <li class="navigation-item">
             <div class="logo-container">
               <a class="navigation-logo" href="index.html">
-                <img class="page-header-logo" src="" alt="логотип седона">
+                <img class="page-header-logo" src="" alt="логотип седона.">
               </a>
             </div>
           </li>
@@ -56,7 +56,7 @@
     <main class="main-index">
       <section class="hero">
         <h1 class="visually-hidden">SEDONA</h1>
-      <img class="hero" src="" alt="пейзаж Sedona">
+      <img class="hero" src="" alt="пейзаж Sedona.">
       </section>
 
       <section class="description">
@@ -71,7 +71,7 @@
           <li class="advantages-item">
             <h3 class="advantages-title">Настоящий городок</h3>
             <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img class="photo-1" src="" alt="здание цветы горы">
+            <img class="photo-1" src="" alt="здание цветы горы.">
           </li>
           <li class="advantages-item">
             <h3 class="advantages-title">Небольшая площадь</h3>
@@ -88,20 +88,20 @@
           <li class="advantages-item">
             <h3 class="advantages-title">Там есть мост дьявола</h3>
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-            <img class="photo-2" src="" alt="мост дьявола">
+            <img class="photo-2" src="" alt="мост дьявола.">
           </li>
           <li class="advantages-item">
-            <img class="advantages-icon" src="" alt="иконка дом">
+            <img class="advantages-icon" src="" alt="иконка дом.">
             <h3 class="advantages-title">Жильё</h3>
             <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
           <li class="advantages-item">
-            <img class="advantages-icon" src="" alt="иконка еда">
+            <img class="advantages-icon" src="" alt="иконка еда.">
             <h3 class="advantages-title">Еда</h3>
             <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
           <li class="advantages-item">
-            <img class="advantages-icon" src="" alt="иконка сувенир">
+            <img class="advantages-icon" src="" alt="иконка сувенир.">
             <h3 class="advantages-title">Сувениры</h3>
             <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
           </li>
