Добавляет адрес файла во фрейм

--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,11 @@
 
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" sizes="32x32" href="images/icons/favicon.png">
     <title>Каталог Седоны</title>
+    <link rel="stylesheet" href="styles/style.css">
   </head>
 
   <body>
@@ -13,7 +17,7 @@
           <li class="navigation-item">
             <div class="logo-container">
               <a class="navigation-logo" href="index.html">
-                <img class="page-header-logo" src="" alt="логотип седона.">
+                <img class="page-header-logo" src="images/logo-sedona.svg" alt="логотип седона.">
               </a>
             </div>
           </li>
@@ -24,7 +28,7 @@
             <a class="navigation-link" href="about_sedona.html">О седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link navigation-link-current" href="hotels.html">Гостиницы</a>
+            <a class="navigation-link navigation-link-current" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
         <ul class="navigation-list navigation-user">
@@ -41,6 +45,7 @@
                 Счетчик нравится
               </span>
             </a>
+            <span class="user-like">12</span>
           </li>
           <li class="navigation-item">
             <a class="navigation-link " href="#">
@@ -132,7 +137,7 @@
         <ul class="hotels-catalog-list">
           <li class="hotels-catalog-amara">
             <a class="hotels-catalog-link" href="#">
-              <img class="hotels-catalog-image" src="" alt="amara.">
+              <img class="hotels-catalog-image" src="images/gallery/amara-resort-spa.jpg" alt="Фотография гостиницы Amara Resort &#38; Spa" width="300" height="212">
               <h4 class="hotels-catalog-title-amara">Amara Resort &#38; Spa</h4>
               <span class="hotels-catalog-description-amara">Гостиница</span>
               <span class="hotels-catalog-price-description-amara">От 4000 &#8381;</span>
@@ -144,7 +149,7 @@
           </li>
           <li class="hotels-catalog-villas">
             <a class="hotels-catalog-link" href="#">
-              <img class="hotels-catalog-image" src="" alt="villas.">
+              <img class="hotels-catalog-image" src="images/gallery/villas-at-poco-diablo.jpg" alt="Фотография гостиницы Villas at Poco Diablo" width="300" height="212">
               <h4 class="hotels-catalog-title-villas">Villas at Poco Diablo</h4>
               <span class="hotels-catalog-description-villas">Гостиница</span>
               <span class="hotels-catalog-price-description-villas">От 5000 &#8381;</span>
@@ -156,7 +161,7 @@
           </li>
           <li class="hotels-catalog-desert">
             <a class="hotels-catalog-link" href="#">
-              <img class="hotels-catalog-image" src="" alt="desert.">
+              <img class="hotels-catalog-image" src="images/gallery/desert-quail-inn.jpg" alt="Фотография гостиницы Desert Quail Inn" width="300" height="212">
               <h4 class="hotels-catalog-title-desert">Desert Quail Inn</h4>
               <span class="hotels-catalog-description-desert">Гостиница</span>
               <span class="hotels-catalog-price-description-desert">От 2500 &#8381;</span>
@@ -168,7 +173,7 @@
           </li>
           <li class="hotels-catalog-green">
             <a class="hotels-catalog-link" href="#">
-              <img class="hotels-catalog-image" src="" alt="green.">
+              <img class="hotels-catalog-image" src="images/gallery/greentree-inn.jpg" alt="Фотография гостиницы GreenTree Inn" width="300" height="212">
               <h4 class="hotels-catalog-title-green">GreenTree Inn</h4>
               <span class="hotels-catalog-description-green">Гостиница</span>
               <span class="hotels-catalog-price-description-green">От 1500 &#8381;</span>
