Добавляет адрес файла во фрейм

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <main class="main-index">
       <section class="hero">
         <h1 class="visually-hidden">SEDONA</h1>
-      <img class="hero" src="images/sedona-main-logo.png" alt="Добро пожаловать в Седону.">
+      <img class="hero" src="images/sedona-main-logo.png" width="458" height="352" alt="Добро пожаловать в Седону.">
       </section>
 
       <section class="description">
