--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
           <li class="navigation-item">
             <div class="logo-container">
               <a class="navigation-logo" href="index.html">
-                <img class="page-header-logo" src="images/logo-sedona.svg" alt="логотип седона.">
+                <img class="page-header-logo" src="images/logo-sedona.svg"  width="139" height="70" alt="логотип седона.">
               </a>
             </div>
           </li>
@@ -137,7 +137,7 @@
         <ul class="hotels-catalog-list">
           <li class="hotels-catalog-amara">
             <a class="hotels-catalog-link" href="#">
-              <img class="hotels-catalog-image" src="images/gallery/amara-resort-spa.jpg" alt="Фотография гостиницы Amara Resort &#38; Spa" width="300" height="212">
+              <img class="hotels-catalog-image" src="images/gallery/amara-resort-spa.jpg" width="300" height="212" alt="Фотография гостиницы Amara Resort &#38; Spa">
               <h4 class="hotels-catalog-title-amara">Amara Resort &#38; Spa</h4>
               <span class="hotels-catalog-description-amara">Гостиница</span>
               <span class="hotels-catalog-price-description-amara">От 4000 &#8381;</span>
@@ -149,7 +149,7 @@
           </li>
           <li class="hotels-catalog-villas">
             <a class="hotels-catalog-link" href="#">
-              <img class="hotels-catalog-image" src="images/gallery/villas-at-poco-diablo.jpg" alt="Фотография гостиницы Villas at Poco Diablo" width="300" height="212">
+              <img class="hotels-catalog-image" src="images/gallery/villas-at-poco-diablo.jpg" width="300" height="212" alt="Фотография гостиницы Villas at Poco Diablo">
               <h4 class="hotels-catalog-title-villas">Villas at Poco Diablo</h4>
               <span class="hotels-catalog-description-villas">Гостиница</span>
               <span class="hotels-catalog-price-description-villas">От 5000 &#8381;</span>
@@ -161,7 +161,7 @@
           </li>
           <li class="hotels-catalog-desert">
             <a class="hotels-catalog-link" href="#">
-              <img class="hotels-catalog-image" src="images/gallery/desert-quail-inn.jpg" alt="Фотография гостиницы Desert Quail Inn" width="300" height="212">
+              <img class="hotels-catalog-image" src="images/gallery/desert-quail-inn.jpg" width="300" height="212" alt="Фотография гостиницы Desert Quail Inn">
               <h4 class="hotels-catalog-title-desert">Desert Quail Inn</h4>
               <span class="hotels-catalog-description-desert">Гостиница</span>
               <span class="hotels-catalog-price-description-desert">От 2500 &#8381;</span>
@@ -173,7 +173,7 @@
           </li>
           <li class="hotels-catalog-green">
             <a class="hotels-catalog-link" href="#">
-              <img class="hotels-catalog-image" src="images/gallery/greentree-inn.jpg" alt="Фотография гостиницы GreenTree Inn" width="300" height="212">
+              <img class="hotels-catalog-image" src="images/gallery/greentree-inn.jpg" width="300" height="212" alt="Фотография гостиницы GreenTree Inn">
               <h4 class="hotels-catalog-title-green">GreenTree Inn</h4>
               <span class="hotels-catalog-description-green">Гостиница</span>
               <span class="hotels-catalog-price-description-green">От 1500 &#8381;</span>
