исправлять путь до лого

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <li class="navigation-item">
             <div class="logo-container">
               <a class="navigation-logo" href="index.html">
-                <img class="page-header-logo" src="/images/logo-sedona.svg" width="139" height="70" alt="логотип седона.">
+                <img class="page-header-logo" src="images/logo-sedona.svg" width="139" height="70" alt="логотип седона.">
               </a>
             </div>
           </li>
