--- a/index.html
+++ b/index.html
@@ -13,14 +13,10 @@
   <body>
     <header class="main-header">
       <nav class="navigation">
+        <a class="navigation-logo" href="index.html">
+          <img class="page-header-logo" src="images/logo-sedona.svg" width="139" height="70" alt="логотип седона.">
+        </a>
         <ul class="navigation-list">
-          <li class="navigation-item">
-            <div class="logo-container">
-              <a class="navigation-logo" href="index.html">
-                <img class="page-header-logo" src="images/logo-sedona.svg" width="139" height="70" alt="логотип седона.">
-              </a>
-            </div>
-          </li>
           <li class="navigation-item">
             <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
           </li>
@@ -31,27 +27,23 @@
             <a class="navigation-link" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
-        <ul class="navigation-list navigation-user">
-          <li class="navigation-item">
-            <a class="navigation-link " href="#">
+        <ul class="navigation-list-right">
+          <li class="navigation-item-right">
+            <a class="navigation-link" href="#">
               <span class="visually-hidden">
                 Поиск
               </span>
             </a>
           </li>
-          <li class="navigation-item">
-            <a class="navigation-link " href="#">
+          <li class="navigation-item-right">
+            <a class="navigation-link" href="#">
               <span class="visually-hidden">
                 Счетчик нравится
               </span>
             </a>
             <span class="user-like">12</span>
           </li>
-          <li class="navigation-item">
-            <a class="navigation-link " href="#">
-              <span class="visually-hidden">
-                Хочу сюда
-              </span>
+          <li class="navigation-item-right">
             </a>
           </li>
         </ul>
@@ -67,7 +59,7 @@
       <section class="description">
         <h2 class="description-sedona">Седона — небольшой городок в Аризоне,
           заслуживающий большего!</h2>
-          <p class="description-more">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+      <section class="page-start-text">
       </section>
 
       <section class="advantages">
@@ -76,39 +68,50 @@
           <li class="advantages-item">
             <h3 class="advantages-title">Настоящий городок</h3>
             <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+            <h3 class="advantages-title-1">Настоящий городок</h3>
+            <p class="advantages-description-1">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             <img class="photo-1" src="images/city-sedona.jpeg" width="800" height="384" alt="здание цветы горы.">
           </li>
           <li class="advantages-item">
             <h3 class="advantages-title">Небольшая площадь</h3>
             <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+          <li class="advantages-item color-1">
+            <h3 class="advantages-title-2">Небольшая площадь</h3>
+            <p class="advantages-description-2">Все достопримечательности находятся очень близко</p>
+          </li>
+          <li class="advantages-item color-2">
+            <h3 class="advantages-title-2">Красивая дорога</h3>
+            <p class="advantages-description-2">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+          </li>
+          <li class="advantages-item color-1">
+            <h3 class="advantages-title-2">Мало туристов</h3>
+            <p class="advantages-description-2">Большинство едет в Гранд Каньон и толпится там</p>
           </li>
           <li class="advantages-item">
-            <h3 class="advantages-title">Красивая дорога</h3>
-            <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Мало туристов</h3>
-            <p class="advantages-description">Большинство едет в Гранд Каньон и толпится там</p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Там есть мост дьявола</h3>
-            <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            <h3 class="advantages-title-1">Там есть мост дьявола</h3>
+            <p class="advantages-description-1">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
             <img class="photo-2" src="images/devil's-bridge.jpeg" width="800" height="384" alt="мост дьявола.">
           </li>
-          <li class="advantages-item">
-            <img class="advantages-icon" src="images/icons/housing.svg" alt="иконка дом.">
-            <h3 class="advantages-title">Жильё</h3>
-            <p class="advantages-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+        </ul>
+      </section>
+
+      <section class="services">
+        <h2 class="visually-hidden">Предоставляемые услуги</h2>
+        <ul class="services-list">
+          <li class="services-item color-1">
+            <img class="services-icon" src="images/icons/housing.svg" alt="иконка дом.">
+            <h3 class="services-title">Жильё</h3>
+            <p class="services-description">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
           </li>
-          <li class="advantages-item">
-            <img class="advantages-icon" src="images/icons/eating.svg" alt="иконка еда.">
-            <h3 class="advantages-title">Еда</h3>
-            <p class="advantages-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+          <li class="services-item">
+            <img class="services-icon" src="images/icons/eating.svg" alt="иконка еда.">
+            <h3 class="services-title">Еда</h3>
+            <p class="services-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
           </li>
-          <li class="advantages-item">
-            <img class="advantages-icon" src="images/icons/souvenir.svg" alt="иконка сувенир.">
-            <h3 class="advantages-title">Сувениры</h3>
-            <p class="advantages-description">Не только китайского, но и настоящего местного производства!</p>
+          <li class="services-item color-1">
+            <img class="services-icon" src="images/icons/souvenir.svg" alt="иконка сувенир.">
+            <h3 class="services-title">Сувениры</h3>
+            <p class="services-description">Не только китайского, но и настоящего местного производства!</p>
           </li>
         </ul>
       </section>
@@ -120,15 +123,17 @@
       </section>
 
       <section class="subscribe">
-        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-        <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
-          <label for="subscribe-email"></label>
-          <input class="field" placeholder="Ваш email" type="email" name="subscribe-email" id="subscribe-email" required>
-          <button class="button subscribe-button" type="submit">
-            <span class="visually-hidden">Подписаться</span>
-          </button>
-        </form>
+        <div class="subscribe-block">
+          <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+          <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+            <label for="subscribe-email"></label>
+            <input class="field" placeholder="Ваш email" type="email" name="subscribe-email" id="subscribe-email" required>
+            <button class="button button-subscribe" type="submit">
+              Подписаться
+            </button>
+          </form>
+        </div>
       </section>
     </main>
 
@@ -136,30 +141,34 @@
       <section class="footer-social">
         <ul class="footer-social-list">
           <li class="footer-social-item">
-            <a class="button" href="https://vk.com/htmlacademy">
+            <a class="button button-social" href="https://vk.com/htmlacademy">
               <span class="visually-hidden">Вконтакте</span>
+              <img class="footer-social-image" src="images/vkontakte.svg" width="24" height="14" alt="Иконка ВКонтакте.">
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="button" href="https://t.me/htmlacademy">
+            <a class="button button-social" href="https://t.me/htmlacademy">
               <span class="visually-hidden">Телеграм</span>
+              <img class="footer-social-image" src="images/telegram.svg" width="18" height="15" alt="Иконка Телеграм.">
             </a>
           </li>
           <li class="footer-social-item">
-            <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+            <a class="button button-social" href="https://www.youtube.com/user/htmlacademyru">
               <span class="visually-hidden">Youtube</span>
+              <img class="footer-social-image" src="images/youtube.svg" width="22" height="17" alt="Иконка Ютуб.">
             </a>
           </li>
         </ul>
       </section>
 
       <section class="number">
-        <a class="footer-contacts-address-phone" href="tel:+78128121212">+78128121212</a>
+        <a class="footer-contacts-address-phone" href="tel:+78128121212">+7(812)8121212</a>
       </section>
 
-      <p class="about-text">
-        <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a>
-      </p>
+      <section class="logo-htmlacademy">
+        <img class="footer-logo-htmlacademy" src="images/logo-htmlacademy.svg" width="115" height="33" alt="Логотип HTMLAcademy.">
+      </section>
+
     </footer>
   </body>
 </html>
