вносит исправления в hero

--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
             <span class="user-like">12</span>
           </li>
           <li class="navigation-item-right">
+            <a class="button button-navigation" href="#">
+                Хочу сюда!
             </a>
           </li>
         </ul>
@@ -56,25 +58,20 @@
       <img class="hero" src="images/sedona-main-logo.png" width="458" height="352" alt="Добро пожаловать в Седону.">
       </section>
 
-      <section class="description">
-        <h2 class="description-sedona">Седона — небольшой городок в Аризоне,
-          заслуживающий большего!</h2>
       <section class="page-start-text">
+        <h1 class="visually-hidden">Описание города</h1>
+        <h2 class="start-title">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</h2>
+        <p class="start-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
       </section>
 
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="advantages-list">
           <li class="advantages-item">
-            <h3 class="advantages-title">Настоящий городок</h3>
-            <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             <h3 class="advantages-title-1">Настоящий городок</h3>
             <p class="advantages-description-1">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
             <img class="photo-1" src="images/city-sedona.jpeg" width="800" height="384" alt="здание цветы горы.">
           </li>
-          <li class="advantages-item">
-            <h3 class="advantages-title">Небольшая площадь</h3>
-            <p class="advantages-description">Все достопримечательности находятся очень близко</p>
           <li class="advantages-item color-1">
             <h3 class="advantages-title-2">Небольшая площадь</h3>
             <p class="advantages-description-2">Все достопримечательности находятся очень близко</p>
