--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
           <h2 class="start-title">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</h2>
           <p class="start-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         </section>
+        <!--Преимущество №1-->
         <section class="advantages">
           <h2 class="visually-hidden">Преимущества</h2>
           <ul class="advantages-list">
@@ -80,18 +81,22 @@
                   alt="здание цветы горы.">
               </div>
             </li>
+            <!--Преимущество №2-->
             <li class="advantages-item color-lightblue">
               <h3 class="advantages-title-black">Небольшая<br> площадь</h3>
               <p class="advantages-description-black">Все достопримечательности<br> находятся очень близко</p>
             </li>
+            <!--Преимущество №3-->
             <li class="advantages-item color-verylightblue">
               <h3 class="advantages-title-black">Красивая<br> дорога</h3>
               <p class="advantages-description-black">Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
             </li>
+            <!--Преимущество №4-->
             <li class="advantages-item color-lightblue">
               <h3 class="advantages-title-black">Мало<br> туристов</h3>
               <p class="advantages-description-black">Большинство едет в Гранд<br> Каньон и толпится там</p>
             </li>
+            <!--Преимущество №5-->
             <li>
               <div class="advantages-image-2">
                 <img class="advantages-image" src="images/devil's-bridge.jpeg" width="800" height="384" alt="мост дьявола.">
@@ -103,6 +108,7 @@
             </li>
           </ul>
         </section>
+        <!--Услуги-->
         <section class="services">
           <h2 class="visually-hidden">Предоставляемые услуги</h2>
           <ul class="services-list">
@@ -120,6 +126,7 @@
             </li>
           </ul>
         </section>
+        <!--Поиск гостиницы-->
         <section class="hotels">
           <h2 class="hotels-title">Заинтересовались?</h2>
           <p class="hotels-description">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц
@@ -128,6 +135,7 @@
             <a class="button-search-hotels" href="#">Поиск гостиницы в седоне</a>
           </div>
         </section>
+        <!--Подписка-->
         <section class="subscribe">
           <div class="subscribe-block">
             <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
