--- a/catalog.html
+++ b/catalog.html
@@ -38,10 +38,11 @@
               </a>
             </li>
             <li class="navigation-item-right">
-              <a class="navigation-user navigation-link-greencircle" href="#">
+              <a class="navigation-user" href="#">
                 <span class="visually-hidden">
                   Счетчик нравится
                 </span>
+                <span class="like">12</span>
                 <svg class="navigation-icon" aria-hidden="true" focusable="false" width="19" height="17" viewBox="0 0 19 17" fill="none" xmlns="http://www.w3.org/2000/svg">
                   <path d="M9.3 17a.9.9 0 0 1-.8-.4c-5.4-6.1-6.7-7.5-7-7.9A5.4 5.4 0 0 1 5.9 0c1.3 0 2.5.5 3.5 1.3a5.46 5.46 0 0 1 9 4.1c0 1.3-.5 2.5-1.3 3.4l-7 7.9c-.2.2-.4.3-.8.3Zm-6-9.5c.3.4 3.5 4 6.1 6.9l6.2-7c.5-.5.7-1.2.7-2 0-1.8-1.5-3.3-3.3-3.3-1 0-2 .5-2.7 1.3-.3.3-.6.4-.9.4-.3 0-.6-.2-.8-.4-.7-.8-1.7-1.3-2.7-1.3-1.8 0-3.3 1.5-3.3 3.3-.1.9.3 1.6.7 2.1-.1 0-.1 0 0 0Z" fill="#000"/>
                 </svg>
@@ -283,9 +284,11 @@
               <h2 class="subscribe-title color-black">Подпишитесь на рассылку</h2>
               <p class="subscribe-description color-black">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
               <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
-                <label for="subscribe-email"></label>
-                <input class="field" placeholder="Ваш e-mail" type="email" name="subscribe-email" id="subscribe-email" required>
-                <button class="button button-subscribe" type="submit">
+                <label for="subscribe-email">
+                  <span class="visually-hidden">Email</span>
+                </label>
+                <input id="subscribe-email" class="field-email" placeholder="Ваш e-mail" type="email" name="subscribe-email" required>
+                <button class="button-subscribe" type="submit">
                   Подписаться
                 </button>
               </form>
