--- a/index.html
+++ b/index.html
@@ -115,15 +115,18 @@
         <section class="services">
           <h2 class="visually-hidden">Предоставляемые услуги.</h2>
           <ul class="services-list">
-            <li class="services-item color-lightblue icon-house">
+            <li class="services-item color-lightblue">
+              <img class="services-image" src="images/icons/housing.svg" width="76" height="72" alt="Значок дома.">
               <h3 class="services-title">Жильё</h3>
               <p class="services-description">Рекомендуем пожить<br> в настоящем мотеле,<br> всё как в кино!</p>
             </li>
-            <li class="services-item icon-eating">
+            <li class="services-item">
+              <img class="services-image" src="images/icons/eating.svg" width="74" height="70" alt="Значок еды.">
               <h3 class="services-title">Еда</h3>
               <p class="services-description">Всегда заказывайте<br> топовый фирменный бургер,<br> вы не разочаруетесь!</p>
             </li>
-            <li class="services-item color-lightblue icon-souvenir">
+            <li class="services-item color-lightblue">
+              <img class="services-image" src="images/icons/souvenir.svg" width="65" height="76" alt="Значок подарка.">
               <h3 class="services-title">Сувениры</h3>
               <p class="services-description">Не только китайского,<br> но и настоящего местного<br> производства!</p>
             </li>
