--- a/index.html
+++ b/index.html
@@ -234,86 +234,74 @@
       </footer>
       <!-- Для показа формы с элемента <div> класса 'modal-container' необходимо снять класс 'modal-container-close' -->
       <div class="modal-container modal-container-close">
-        <div class="modal-auth">
+        <div class="modal modal-search-hotel">
           <button class="modal-close-button" type="button">
-            <svg width="15" height="15" viewBox="0 0 15 15" fill="#000000" xmlns="http://www.w3.org/2000/svg">
-              <path
-                d="M14.5 1.78 13.2.5 7.49 6.2 1.79.5.48 1.8l5.7 5.7-5.7 5.7 1.3 1.3 5.7-5.7 5.7 5.7 1.3-1.3-5.7-5.7 5.7-5.7Z" />
-            </svg>
-            <span class="visually-hidden">Закрыть.</span>
+            <span class="visually-hidden">Закрыть</span>
           </button>
           <section class="modal-content">
-            <h2 class="modal-content-title">Поиск гостиницы в Седоне</h2>
-            <form class="modal-content-form" action="https://echo.htmlacademy.ru/" method="post">
-              <!-- Для показа элемента <span> класса 'error-message' необходимо снять класс 'error-message-hide' с элемента <div> класса 'modal-content-container' -->
-              <div class="modal-content-container error-message-hide">
-                <label class="modal-content-label" for="arrival-date">Дата заезда:</label>
-                <input class="modal-content-input" type="text" name="arrival-date" id="arrival-date"
+            <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
+            <form class="modal-form" action="https://echo.htmlacademy.ru/" method="post">
+              <p class="field-group">
+                <label class="text-modal" for="arrival-form">Дата заезда:</label>
+                <input class="modal-date-field" id="arrival-form" type="text" name="arrival-form"
                   value="27 апреля 2020" placeholder="Укажите дату" required>
-                <span class="modal-content-message error-message">Мы не можем отправить вас в прошлое.</span>
-              </div>
-              <!-- Для показа элемента <span> класса 'info-message' необходимо снять класс 'info-message-hide' с элемента <div> класса 'modal-content-container' -->
-              <div class="modal-content-container info-message-hide">
-                <label class="modal-content-label" for="departure-date">Дата выезда:</label>
-                <input class="modal-content-input" type="text" name="departure-date" id="departure-date"
+              </p>
+              <p class="text-modal-item status-error">Мы не можем отправить вас в прошлое.</p>
+              <p class="field-group">
+                <label class="text-modal" for="departure-form">Дата выезда:</label>
+                <input class="modal-date-field" id="departure-form" type="text" name="departure-form"
                   value="1 сентября 2023" placeholder="Укажите дату" required>
-                <span class="modal-content-message info-message">На эти даты есть свободные номера. Пока есть.</span>
-              </div>
-              <div class="modal-content-container no-calendar">
-                <div class="modal-content-container-guests modal-content-container-adults">
-                  <label class="modal-content-label" for="value-adults">Взрослые:</label>
-                  <div class="modal-content-container-value">
-                    <button class="modal-content-value-button value-down" type="button">
-                      <svg width="14" height="2" viewBox="0 0 14 2" fill="#756157" fill-opacity=".3"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 0v2h14V0H0Z" />
-                      </svg>
-                      <span class="visually-hidden">Уменьшить.</span>
-                    </button>
-                    <input class="modal-content-input modal-content-input-value" type="text" name="value-adults"
-                      id="value-adults" value="2" required>
-                    <button class="modal-content-value-button value-up" type="button">
-                      <svg width="14" height="14" viewBox="0 0 14 14" fill="#756157" fill-opacity=".3"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
-                      </svg>
-                      <span class="visually-hidden">Увеличить.</span>
-                    </button>
-                  </div>
+              </p>
+              <p class="text-modal-item">На эти даты есть свободные номера. Пока есть.</p>
+              <div class="field-group-people">
+                <div class="field-group-adults">
+                  <label class="text-modal label-adults" for="adults">Взрослые:</label>
+                  <button class="button-modal button-minus" type="button">
+                    <svg class="button-condition" aria-hidden="true" width="14" height="2" viewBox="0 0 14 2"
+                      fill="#756157" fill-opacity=".3" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M0 0v2h14V0H0Z" />
+                    </svg>
+                  </button>
+                  <input class="modal-people" id="adults" type="text" name="adults-people" value="2" required>
+                  <button class="button-modal button-plus" type="button">
+                    <svg class="button-condition" width="14" height="14" viewBox="0 0 14 14" fill="#756157"
+                      fill-opacity=".3" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
+                    </svg>
+                  </button>
                 </div>
-                <div class="modal-content-container-guests modal-content-container-kids">
-                  <label class="modal-content-label" for="value-kids">Дети:</label>
-                  <span class="modal-content-tooltip">
-                    <button class="modal-content-tooltip-button" type="button" aria-labelledby="tooltip-value-kids">
-                      <svg width="2" height="12" viewBox="0 0 2 12" fill="#ffffff" xmlns="http://www.w3.org/2000/svg">
-                        <path fill-rule="evenodd" clip-rule="evenodd" d="M0 0h2v2H0V0Zm2 12H0V3h2v9Z" />
+                <div class="field-group-children">
+                  <label class="text-modal form-label-icon" for="children">Дети:</label>
+                  <span class="tooltip">
+                    <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label-date">
+                      <svg class="tooltip-icon" width="26" height="26" viewBox="0 0 26 26" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="13" cy="13" r="13" fill="#83B3D3" />
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M12 7H14V9H12V7ZM14 19H12V10H14V19Z"
+                          fill="white" />
                       </svg>
+                      <span class="visually-hidden">Посмотреть дополнительную информацию</span>
                     </button>
-                    <span class="modal-content-tooltip-text" role="tooltip" id="tooltip-value-kids">Укажите количество
-                      детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются
+                    <span class="tooltip-text" role="tooltip" id="tooltip-label-date">Укажите количество детей,<br>
+                      которые будут с вами, возраст<br> которых от 6 до 18 лет. Дети<br> до 6 лет размещаются<br>
                       бесплатно.</span>
                   </span>
-                  <div class="modal-content-container-value">
-                    <button class="modal-content-value-button value-down" type="button">
-                      <svg width="14" height="2" viewBox="0 0 14 2" fill="#756157" fill-opacity=".3"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path d="M0 0v2h14V0H0Z" />
-                      </svg>
-                      <span class="visually-hidden">Уменьшить.</span>
-                    </button>
-                    <input class="modal-content-input modal-content-input-value" type="text" name="value-kids"
-                      id="value-kids" value="2" required>
-                    <button class="modal-content-value-button value-up" type="button">
-                      <svg width="14" height="14" viewBox="0 0 14 14" fill="#756157" fill-opacity=".3"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
-                      </svg>
-                      <span class="visually-hidden">Увеличить.</span>
-                    </button>
-                  </div>
+                  <button class="button-modal button-minus-children" type="button">
+                    <svg class="button-condition" width="14" height="2" viewBox="0 0 14 2" fill="#756157"
+                      fill-opacity=".3" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M0 0v2h14V0H0Z" />
+                    </svg>
+                  </button>
+                  <input class="modal-people" id="children" type="text" name="children-people" value="2" required>
+                  <button class="button-modal button-plus-children" type="button">
+                    <svg class="button-condition" width="14" height="14" viewBox="0 0 14 14" fill="#756157"
+                      fill-opacity=".3" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M14 6H8V0H6v6H0v2h6v6h2V8h6V6Z" />
+                    </svg>
+                  </button>
                 </div>
               </div>
-              <button class="modal-content-find-button" type="submit">Найти</button>
+              <button class="button-find" type="submit">Найти</button>
             </form>
           </section>
         </div>
