--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M12 7H14V9H12V7ZM14 19H12V10H14V19Z"
                           fill="white" />
                       </svg>
-                      <span class="visually-hidden">Посмотреть дополнительную информацию</span>
+                      <span class="visually-hidden">Посмотреть дополнительную информацию.</span>
                     </button>
                     <span class="tooltip-text" role="tooltip" id="tooltip-label-date">Укажите количество детей,<br>
                       которые будут с вами, возраст<br> которых от 6 до 18 лет. Дети<br> до 6 лет размещаются<br>
