Правка по критериям

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/icons/favicon.png">
-    <title>HTML Academy: Седона</title>
+    <title>Седона: главная страница</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
@@ -13,7 +13,7 @@
       <header class="main-header">
         <nav class="navigation">
           <a class="navigation-logo" href="index.html">
-            <img class="page-header-logo" src="images/logo-sedona.svg" width="140" height="70" alt="логотип седона.">
+            <img class="page-header-logo" src="images/header/logo-sedona.svg" width="140" height="70" alt="логотип седона.">
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
@@ -67,7 +67,7 @@
       <main class="main-index main-container">
         <section class="hero">
           <h1 class="visually-hidden">SEDONA.</h1>
-          <img class="front-welcome-img" src="images/sedona-main-logo.png" width="458" height="352"
+          <img class="front-welcome-img" src="images/main/sedona-main-logo.png" width="458" height="352"
             alt="Добро пожаловать в Седону.">
         </section>
         <section class="page-start-text">
@@ -86,7 +86,7 @@
             </li>
             <li>
               <div class="advantages-image-1">
-                <img class="advantages-image" src="images/city-sedona.jpeg" width="800" height="384"
+                <img class="advantages-image" src="images//main/city-sedona.jpeg" width="800" height="384"
                   alt="здание цветы горы.">
               </div>
             </li>
@@ -108,7 +108,7 @@
             <!--Преимущество №5-->
             <li>
               <div class="advantages-image-2">
-                <img class="advantages-image" src="images/devil's-bridge.jpeg" width="800" height="384"
+                <img class="advantages-image" src="images//main/devil's-bridge.jpeg" width="800" height="384"
                   alt="мост дьявола.">
               </div>
             </li>
@@ -124,18 +124,18 @@
           <h2 class="visually-hidden">Предоставляемые услуги.</h2>
           <ul class="services-list">
             <li class="services-item color-lightblue">
-              <img class="services-image" src="images/icons/housing.svg" width="76" height="72" alt="Значок дома.">
+              <img class="services-image" src="images/main/housing.svg" width="76" height="72" alt="Значок дома.">
               <h3 class="services-title">Жильё</h3>
               <p class="services-description">Рекомендуем пожить<br> в настоящем мотеле,<br> всё как в кино!</p>
             </li>
             <li class="services-item">
-              <img class="services-image" src="images/icons/eating.svg" width="74" height="70" alt="Значок еды.">
+              <img class="services-image" src="images/main/eating.svg" width="74" height="70" alt="Значок еды.">
               <h3 class="services-title">Еда</h3>
               <p class="services-description">Всегда заказывайте<br> топовый фирменный бургер,<br> вы не разочаруетесь!
               </p>
             </li>
             <li class="services-item color-lightblue">
-              <img class="services-image" src="images/icons/souvenir.svg" width="65" height="76" alt="Значок подарка.">
+              <img class="services-image" src="images/main/souvenir.svg" width="65" height="76" alt="Значок подарка.">
               <h3 class="services-title">Сувениры</h3>
               <p class="services-description">Не только китайского,<br> но и настоящего местного<br> производства!</p>
             </li>
