--- a/catalog.html
+++ b/catalog.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" sizes="32x32" href="images/icons/favicon.png">
-    <title>Каталог Седоны</title>
+    <title>Каталог</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
     <link rel="stylesheet" href="styles/styles.css">
   </head>
   <body>
@@ -13,7 +13,7 @@
       <header class="main-header">
         <nav class="navigation">
           <a class="navigation-logo" href="index.html">
-            <img class="page-header-logo" src="images/logo-sedona.svg" width="140" height="70" alt="логотип седона.">
+            <img class="page-header-logo" src="images/header/logo-sedona.svg" width="140" height="70" alt="логотип седона.">
           </a>
           <ul class="navigation-list">
             <li class="navigation-item">
