правит  блок advantages

--- a/index.html
+++ b/index.html
@@ -72,50 +72,50 @@
             alt="Добро пожаловать в Седону.">
         </section>
         <section class="page-start-text">
-          <h1 class="visually-hidden">Описание города.</h1>
+          <h2 class="visually-hidden">Описание города.</h2>
           <h2 class="start-title">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</h2>
           <p class="start-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         </section>
         <!--Преимущество №1-->
         <section class="advantages">
           <h2 class="visually-hidden">Преимущества.</h2>
-          <ul class="advantages-list">
             <div class="advantages-card">
-              <li class="advantages-item">
+              <div class="advantages-card-content">
                 <h3 class="advantages-title-white">Настоящий<br> городок</h3>
                 <p class="advantages-description-white">Седона — не аттракцион для<br> туристов, там течёт своя<br>
                   жизнь
                 </p>
-              </li>
-              <img class="advantages-image" src="images//main/city-sedona.jpeg" width="800" height="384"
-                alt="здание цветы горы.">
+              </div>
+                <img class="advantages-image" src="images//main/city-sedona.jpeg" width="800" height="384"
+                  alt="здание цветы горы.">
             </div>
             <!--Преимущество №2-->
-            <li class="advantages-item color-lightblue">
-              <h3 class="advantages-title-black">Небольшая<br> площадь</h3>
-              <p class="advantages-description-black">Все достопримечательности<br> находятся очень близко</p>
-            </li>
+            <ul class="advantages-list">
+              <li class="advantages-item color-lightblue">
+                <h3 class="advantages-title-black">Небольшая<br> площадь</h3>
+                <p class="advantages-description-black">Все достопримечательности<br> находятся очень близко</p>
+              </li>
             <!--Преимущество №3-->
-            <li class="advantages-item color-verylightblue">
-              <h3 class="advantages-title-black">Красивая<br> дорога</h3>
-              <p class="advantages-description-black">Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
-            </li>
+              <li class="advantages-item color-verylightblue">
+                <h3 class="advantages-title-black">Красивая<br> дорога</h3>
+                <p class="advantages-description-black">Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
+              </li>
             <!--Преимущество №4-->
-            <li class="advantages-item color-lightblue">
-              <h3 class="advantages-title-black">Мало<br> туристов</h3>
-              <p class="advantages-description-black">Большинство едет в Гранд<br> Каньон и толпится там</p>
-            </li>
+              <li class="advantages-item color-lightblue">
+                <h3 class="advantages-title-black">Мало<br> туристов</h3>
+                <p class="advantages-description-black">Большинство едет в Гранд<br> Каньон и толпится там</p>
+              </li>
+            </ul>
             <!--Преимущество №5-->
             <div class="advantages-card">
               <img class="advantages-image" src="images//main/devil's-bridge.jpeg" width="800" height="384"
                 alt="мост дьявола.">
-              <li class="advantages-item">
+              <div class="advantages-card-content">
                 <h3 class="advantages-title-white">Там есть<br> мост дьявола</h3>
                 <p class="advantages-description-white">Да, по нему можно пройти!<br> Если вы осмелитесь,<br> разумеется
                 </p>
-              </li>
+              </div>
             </div>
-          </ul>
         </section>
         <!--Услуги-->
         <section class="services">
